@@ -1,6 +1,7 @@
 # 1.0.4 : --/--/2020
 
-* User config, sache
+* User config, cache
+* GroupUser, field type corrections
 
 # 1.0.3 : 20/01/2020
 
